# outlap

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  clippy.toml
crates/outlap-conformance/: Cargo.toml
crates/outlap-conformance/src/: lib.rs
crates/outlap-conformance/tests/: convergence.rs
crates/outlap-core/: Cargo.toml
crates/outlap-core/src/: assembler.rs  block.rs  bus.rs  gridmap.rs  integrator.rs  interp.rs  lib.rs  relax.rs  spline.rs  state.rs
crates/outlap-core/tests/: alloc.rs  alloc_soa.rs  gridmap_props.rs
crates/outlap-powertrain/: Cargo.toml
crates/outlap-powertrain/examples/: manager_trace.rs
crates/outlap-powertrain/src/: ledger.rs  lib.rs  manager.rs  rulebook.rs  schedule.rs
crates/outlap-powertrain/tests/: alloc.rs  manager.rs  rulebook.rs
crates/outlap-powertrain/tests/common/: mod.rs
crates/outlap-py/: Cargo.toml  outlap_core.pyi  pyproject.toml
crates/outlap-py/src/: artifacts.rs  assembly.rs  convert.rs  lib.rs  qss_entry.rs  transient_entry.rs
crates/outlap-qss/: Cargo.toml
crates/outlap-qss/examples/: battery_coupling.rs  catalunya_lap.rs  envelope_profile.rs  envelope_tire_state.rs  ggv_traces.rs  limebeer_lap.rs  thermal_traces.rs  tire_march_lap.rs
crates/outlap-qss/src/: error.rs  ers.rs  fuel.rs  graph.rs  lib.rs  margin.rs  path.rs  qss.rs  result.rs  solver.rs  stack.rs  tire.rs  vehicle.rs
crates/outlap-qss/src/t1/: aero.rs  battery.rs  envelope.rs  mod.rs  powertrain.rs  thermal.rs  trim.rs  vehicle.rs
crates/outlap-qss/tests/: alloc.rs  analytic.rs  assembly.rs  battery.rs  battery_nrel.rs  catalunya.rs  envelope.rs  ers_march.rs  fuel.rs  properties.rs  qss_dispatch.rs  regen.rs  stint.rs  t1_aero.rs  t1_powertrain.rs  t1_trim.rs  thermal.rs
crates/outlap-qss/tests/golden/battery_nrel/: cold25_rc1.csv  cold25_rc2.csv  warm40_rc1.csv  warm40_rc2.csv
crates/outlap-raceline/: Cargo.toml
crates/outlap-raceline/examples/: catalunya_line.rs
crates/outlap-raceline/src/: csv.rs  lib.rs
crates/outlap-raceline/tests/: catalunya_line.rs  generator.rs
crates/outlap-schema/: Cargo.toml
crates/outlap-schema/src/: battery.rs  centerline.rs  conditions.rs  diagnostics.rs  emotor.rs  error.rs  io.rs  lib.rs  ptm.rs  refs.rs  sidecar.rs  sim.rs  track.rs  tree.rs  tyr.rs  version.rs
crates/outlap-schema/src/load/: estimate.rs  merge.rs  mod.rs  provenance.rs  report.rs  semantic.rs  topology.rs  unknown.rs
crates/outlap-schema/src/tir/: map.rs  mod.rs  parse.rs  write.rs
crates/outlap-schema/src/vehicle/: aero.rs  battery.rs  brakes.rs  chassis.rs  driver.rs  drivetrain.rs  ers.rs  fuel.rs  mod.rs  policy.rs  suspension.rs  tires.rs
crates/outlap-schema/tests/: diagnostics.rs  pdt_import.rs  quartet.rs  roundtrip.rs  sidecar.rs  tir.rs
crates/outlap-schema/tests/fixtures/: d.ptm.maps.parquet  gen_gridmap_fixture.py  gen_ptm_maps.py  gridmap_2d.parquet  pdt_synth_du_vdc.maps.parquet
crates/outlap-thermal/: Cargo.toml
crates/outlap-thermal/src/: correlations.rs  lib.rs  network.rs
crates/outlap-tire/: Cargo.toml
crates/outlap-tire/examples/: thermal_ring.rs  wear_cliff.rs
crates/outlap-tire/src/: brush.rs  lib.rs  model.rs  relax.rs  slip.rs  thermal.rs
crates/outlap-tire/src/mf61/: combined.rs  fx.rs  fy.rs  mod.rs  mxmy.rs  mz.rs  params.rs  peak.rs
crates/outlap-tire/tests/: alloc.rs  brush_relax.rs  eval.rs  golden.rs  props.rs  reference.rs  thermal.rs  wear.rs
crates/outlap-tire/tests/common/: mod.rs
crates/outlap-track/: Cargo.toml
crates/outlap-track/src/: lib.rs
crates/outlap-track/tests/: elevation.rs  geometry.rs  load.rs  offset.rs  spa_osm.rs  tumftm_tracks.rs
crates/outlap-transient/: Cargo.toml
crates/outlap-transient/examples/: diag.rs  tire_thermal_lap.rs  transient_lap.rs
crates/outlap-transient/src/: control.rs  lap.rs  lib.rs  line_table.rs  result.rs  tire_thermal.rs
crates/outlap-transient/tests/: control.rs  driver.rs  dynamics.rs  fuel.rs  handling.rs  lift.rs  parity_report.rs  perf_alloc.rs  perf_alloc_t3.rs  perf_alloc_thermal.rs  perf_throughput.rs  tire_thermal.rs
crates/outlap-transient/tests/common/: mod.rs
crates/outlap-vehicle/: Cargo.toml
crates/outlap-vehicle/src/: assembly.rs  chassis.rs  control.rs  forces.rs  lib.rs  params.rs
crates/outlap-vehicle/tests/: alloc_t3.rs  control_props.rs  kane_fixture.rs  kane_fixture_t3.rs
python/: pyproject.toml
python/examples/: pdt_validate.py  plot_lap.py  plot_line_compare.py  plot_track.py
python/src/outlap/: __init__.py  core.py  schemas.py
python/src/outlap/importers/: __init__.py  osm_track.py  tumftm_track.py
python/src/outlap/tir/: __init__.py  __main__.py  convert.py  doc.py  map.py  parse.py  write.py
python/src/outlap/tirefit/: README.md  __init__.py  __main__.py  data.py  mf61.py  report.py  stages.py
python/src/outlap/wearcal/: README.md  __init__.py  __main__.py  data.py  model.py  optimize.py  report.py  sim.py
python/tests/: pdt_fixtures.py  test_compounds.py  test_core.py  test_ers.py  test_limebeer.py  test_model3.py  test_osm_track.py  test_parity.py  test_pdt.py  test_schemas.py  test_stint.py  test_stint_soc.py  test_t3.py  test_tir.py  test_tirefit.py  test_transient.py  test_tumftm_track.py  test_wear_validation.py  test_wearcal.py
python/tests/golden/: f1_2026_t0.parquet  limebeer_t0_flat.parquet  limebeer_t1_flat.parquet  limebeer_t2_flat.parquet
python/tools/: gen_battery_nrel_golden.py  gen_bmw320i_golden.py  gen_f1_aero.py  gen_f1_es_pack.py  gen_f1_ice.py  gen_model3_powertrain.py  plot_battery_coupling.py  plot_compound_crossover.py  plot_envelope_tire_state.py  plot_ers_t2.py  plot_f1_aero.py  plot_fuel_us.py  plot_ggv_envelope.py  plot_limebeer.py  plot_machine_thermal.py  plot_model3.py  plot_parity.py  plot_pr8_validation.py  plot_qss_powertrain.py  plot_raceline.py  plot_stint.py  plot_t3_chassis.py  plot_t3_tier.py  plot_tire_march.py  plot_tire_thermal.py  plot_tire_thermal_lap.py  plot_tire_thermal_validation.py  plot_tire_wear.py  plot_transient_review.py  plot_wear_cliff_validation.py
(+222 files in other folders)
