[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"

# Central version pinning (CLAUDE.md: "pin versions"). Shared across outlap-schema,
# outlap-py, core, and the CLI so the file-format contract and its consumers agree.
[workspace.dependencies]
num-traits = { version = "0.2.19", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
schemars = "1.2.1"
thiserror = "2.0.18"
miette = "7.6.0"
marked-yaml = "0.8.0"
serde_path_to_error = "0.1.20"
strsim = "0.11.1"
# Shortest round-tripping f64→decimal with IEEE round-half-to-even tie-breaking (Ryū). Chosen so
# the `.tir` writer's canonical number format matches Python `repr` byte-for-byte (MIT OR Apache-2.0).
ryu = "1.0.18"
blake3 = { version = "1.8.5", default-features = false }
# clarabel's `serde` feature is effectively required (its error enum references serde_json
# unconditionally in 0.11.1), so keep default features.
clarabel = "0.11.1"
# Parquet map-sidecar decode (assembly-time only, behind outlap-schema's `parquet` feature). Apache
# Parquet impl in Rust (Apache-2.0, GPL-3.0-compatible). default-features=false + snap keeps it to the
# SNAPPY-compressed DOUBLE columns the importers emit (no arrow/zstd/brotli/lz4/cli/async pulled in).
parquet = { version = "59.0.0", default-features = false, features = ["snap"] }
# In-memory ChunkReader for the parquet reader (bytes in, no filesystem). MIT OR Apache-2.0.
bytes = "1.10.1"

# Test-only.
proptest = "1.6.0"
dhat = "0.3.3"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
