[project]
name = "outlap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KMoula30", email = "neomoula@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "numpy>=2.5.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "xarray>=2026.4.0",
]

[project.scripts]
outlap = "outlap:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
