[project]
name = "outlap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KMoula30", email = "neomoula@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "jsonschema>=4.23.0",
    "numpy>=2.5.0",
    "outlap-core",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.2",
    "xarray>=2026.4.0",
]

# The Rust core bindings build from the workspace via maturin (needs a Rust toolchain; CI installs
# one in the python job). `uv sync` compiles the extension automatically.
[tool.uv.sources]
outlap-core = { path = "../crates/outlap-py" }

[project.optional-dependencies]
# Tooling for the track importer + plot sanity (§9.3). Network + heavier deps, kept out of the
# core install; enable with `uv sync --extra track-import`.
track-import = [
    "requests>=2.32.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
]

[project.scripts]
outlap = "outlap:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
# Everything needed to run (and CI-execute) the notebooks/ tour.
notebooks = [
    "matplotlib>=3.9.0",
    "ipywidgets>=8.1.0",
    "ipykernel>=6.29.0",
    "nbclient>=0.10.0",
    "nbformat>=5.10.0",
]
