[project]
name = "outlap"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KMoula30", email = "neomoula@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "jsonschema>=4.23.0",
    "numpy>=2.5.0",
    "outlap-core",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.2",
    "xarray>=2026.4.0",
]

# The Rust core bindings build from the workspace via maturin (needs a Rust toolchain; CI installs
# one in the python job). `uv sync` compiles the extension automatically.
[tool.uv.sources]
outlap-core = { path = "../crates/outlap-py" }

[project.optional-dependencies]
# Tooling for the track importer + plot sanity (§9.3). Network + heavier deps, kept out of the
# core install; enable with `uv sync --extra track-import`.
track-import = [
    "requests>=2.32.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
]
# The MF6.1 fitting pipeline (`outlap.tirefit`). scipy is confined to this extra: the fit stages
# import it lazily and raise an actionable error if absent. Enable with `uv sync --extra tire-fit`.
tire-fit = [
    "scipy>=1.14",
]

[project.scripts]
outlap = "outlap:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
# Everything needed to run (and CI-execute) the notebooks/ tour.
notebooks = [
    "matplotlib>=3.9.0",
    "ipywidgets>=8.1.0",
    "ipykernel>=6.29.0",
    "nbclient>=0.10.0",
    "nbformat>=5.10.0",
]
# Symbolic EOM derivation (Decision #32): the SymPy Kane notebook under docs/derivations/ that
# regenerates the committed RHS fixture the Rust 1e-12 test checks. Kept out of the default install;
# the CI python job syncs it to re-execute the notebook and git-diff the fixture.
derivations = [
    "sympy>=1.13",
    "ipykernel>=6.29.0",
    "nbclient>=0.10.0",
    "nbformat>=5.10.0",
]

[tool.ruff]
# Existing code is formatted at ruff's default 88; keep it (only comments/strings run longer).
line-length = 88

[tool.ruff.lint]
# Defaults (E4/E7/E9/F) plus import sorting, pyupgrade, and bugbear. CI runs
# `ruff check` + `ruff format --check`.
select = ["E4", "E7", "E9", "F", "I", "UP", "B"]

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests"]
# Curated allows (the Rust crates' "pedantic with curated allows" philosophy): h5py, scipy, and
# jsonschema ship no stubs, so values crossing those boundaries are Unknown to pyright.
reportMissingTypeStubs = false

[[tool.pyright.executionEnvironments]]
# The PDT HDF5 importer + its tests live at the h5py/numpy untyped boundary: silencing the
# Unknown-type cascade HERE (and only here) keeps strict signal for the rest of the package.
# Everything else — including all of `outlap.tir`/`outlap.tirefit` — is fully strict.
root = "src/outlap/importers"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false

[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
