[package]
name = "outlap-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
num-traits = { workspace = true, features = ["libm"] }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
dhat = { workspace = true }

[lints]
workspace = true
