[package]
name = "outlap-qss"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
outlap-core = { path = "../outlap-core" }
outlap-tire = { path = "../outlap-tire" }
outlap-track = { path = "../outlap-track" }
outlap-thermal = { path = "../outlap-thermal" }
# default-features = false keeps outlap-qss wasm-clean; the example/tests bring the std FsLoader.
outlap-schema = { path = "../outlap-schema", default-features = false }
thiserror = { workspace = true }
# Optional, native-edge only: parallel g-g-g-v envelope generation over the independent
# (v, g_normal) fibres. NON-default so the wasm build stays thread-free (wasm-clean rule);
# enabled by outlap-py. Deterministic: fibres are independent and merged in fixed order.
rayon = { version = "1.10", optional = true }

[features]
# Parallel envelope generation (rayon fibre sweep). Native-only; never enabled for wasm targets.
parallel = ["dep:rayon"]

[dev-dependencies]
outlap-schema = { path = "../outlap-schema" }
# The Limebeer validation example runs the min-curvature line generator (dev-only; the crate's
# library stays free of the raceline dependency).
outlap-raceline = { path = "../outlap-raceline" }
proptest = { workspace = true }
dhat = { workspace = true }

[lints]
workspace = true
