[package]
name = "outlap-raceline"
version = "0.2.5"
edition.workspace = true
license.workspace = true

[dependencies]
outlap-core = { path = "../outlap-core" }
outlap-track = { path = "../outlap-track" }
clarabel = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
outlap-schema = { path = "../outlap-schema" }
outlap-qss = { path = "../outlap-qss" }

[lints]
workspace = true
