[package]
name = "outlap-schema"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "outlap file-format contract: serde + schemars types and the vehicle load/validation pipeline"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
marked-yaml = { workspace = true }
serde_path_to_error = { workspace = true }
strsim = { workspace = true }
ryu = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["std"]
# `std` gates the filesystem SourceLoader; the crate is otherwise wasm-clean.
std = []

[[bin]]
name = "gen_schemas"
path = "bin/gen_schemas.rs"
required-features = ["std"]

[lints]
workspace = true
