[package]
name = "outlap-vehicle"
version = "0.2.5"
edition.workspace = true
license.workspace = true

[dependencies]
num-traits.workspace = true
outlap-core = { path = "../outlap-core" }
outlap-tire = { path = "../outlap-tire" }
# The T2 chassis block reuses the T1 quasi-static load-transfer algebra (PR2 export) so both tiers
# derive per-wheel normal loads from the identical expressions (HANDOFF §6.1 "one vehicle
# description, four derived views"). outlap-qss is wasm-clean, so this keeps the vehicle crate
# wasm-clean too.
outlap-qss = { path = "../outlap-qss" }
# The assembly module reads the vehicle document's own `driver`/`brakes`/`drivetrain.control`
# sections to build the blocks (all config logic at assembly, never in the loop).
outlap-schema = { path = "../outlap-schema" }

[dev-dependencies]
serde_json.workspace = true
proptest = { workspace = true }

[lints]
workspace = true
